--- a/src/Marie_test.ipynb
+++ b/src/Marie_test.ipynb
@@ -1147,13 +1147,15 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/charles/anaconda3/lib/python3.6/site-packages/pandas/core/indexing.py:621: SettingWithCopyWarning: \n",
+      "/opt/anaconda3/envs/ada/lib/python3.6/site-packages/pandas/core/indexing.py:630: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1199,14 +1201,14 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>3.886669e-12</td>\n",
+       "      <td>3.552714e-15</td>\n",
        "      <td>-1.566699</td>\n",
-       "      <td>1.090239e-13</td>\n",
+       "      <td>1.110223e-16</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>981.274534</td>\n",
-       "      <td>-4972.244637</td>\n",
-       "      <td>1.163514e-12</td>\n",
-       "      <td>1658.983913</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-6.048959</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.895982</td>\n",
        "      <td>-0.477511</td>\n",
        "      <td>0.771957</td>\n",
        "      <td>0.590545</td>\n",
@@ -1214,14 +1216,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>3.886669e-12</td>\n",
+       "      <td>3.552714e-15</td>\n",
        "      <td>-0.522233</td>\n",
-       "      <td>1.090239e-13</td>\n",
+       "      <td>1.110223e-16</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>981.274534</td>\n",
-       "      <td>-4966.195678</td>\n",
-       "      <td>1.163514e-12</td>\n",
-       "      <td>1658.983913</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.895982</td>\n",
        "      <td>0.771957</td>\n",
        "      <td>-0.477511</td>\n",
        "      <td>0.590545</td>\n",
@@ -1229,14 +1231,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>41</th>\n",
-       "      <td>3.886669e-12</td>\n",
+       "      <td>3.552714e-15</td>\n",
        "      <td>-0.870388</td>\n",
-       "      <td>1.090239e-13</td>\n",
+       "      <td>1.110223e-16</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>983.679618</td>\n",
-       "      <td>-4972.244637</td>\n",
-       "      <td>1.163514e-12</td>\n",
-       "      <td>1658.983913</td>\n",
+       "      <td>2.405085</td>\n",
+       "      <td>-6.048959</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.895982</td>\n",
        "      <td>1.142558</td>\n",
        "      <td>-2.097580</td>\n",
        "      <td>-1.181090</td>\n",
@@ -1244,14 +1246,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>44</th>\n",
-       "      <td>3.886669e-12</td>\n",
+       "      <td>3.552714e-15</td>\n",
        "      <td>-0.870388</td>\n",
-       "      <td>1.090239e-13</td>\n",
+       "      <td>1.110223e-16</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>981.274534</td>\n",
-       "      <td>-4972.244637</td>\n",
-       "      <td>1.163514e-12</td>\n",
-       "      <td>1658.983913</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-6.048959</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.895982</td>\n",
        "      <td>1.142558</td>\n",
        "      <td>-2.097580</td>\n",
        "      <td>-0.590545</td>\n",
@@ -1259,14 +1261,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>104</th>\n",
-       "      <td>3.886669e-12</td>\n",
+       "      <td>3.552714e-15</td>\n",
        "      <td>1.566699</td>\n",
-       "      <td>1.090239e-13</td>\n",
+       "      <td>1.110223e-16</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>983.679618</td>\n",
-       "      <td>-4972.244637</td>\n",
-       "      <td>1.163514e-12</td>\n",
-       "      <td>1658.983913</td>\n",
+       "      <td>2.405085</td>\n",
+       "      <td>-6.048959</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.895982</td>\n",
        "      <td>1.142558</td>\n",
        "      <td>-2.097580</td>\n",
        "      <td>-0.935994</td>\n",
@@ -1277,26 +1279,19 @@
        "</div>"
       ],
       "text/plain": [
-       "          mu_mass  realization    sigma_mass  volume_fraction      y1_bwd  \\\n",
-       "10   3.886669e-12    -1.566699  1.090239e-13              0.0  981.274534   \n",
-       "19   3.886669e-12    -0.522233  1.090239e-13              0.0  981.274534   \n",
-       "41   3.886669e-12    -0.870388  1.090239e-13              0.0  983.679618   \n",
-       "44   3.886669e-12    -0.870388  1.090239e-13              0.0  981.274534   \n",
-       "104  3.886669e-12     1.566699  1.090239e-13              0.0  983.679618   \n",
+       "          mu_mass  realization    sigma_mass  volume_fraction    y1_bwd  \\\n",
+       "10   3.552714e-15    -1.566699  1.110223e-16              0.0  0.000000   \n",
+       "19   3.552714e-15    -0.522233  1.110223e-16              0.0  0.000000   \n",
+       "41   3.552714e-15    -0.870388  1.110223e-16              0.0  2.405085   \n",
+       "44   3.552714e-15    -0.870388  1.110223e-16              0.0  0.000000   \n",
+       "104  3.552714e-15     1.566699  1.110223e-16              0.0  2.405085   \n",
        "\n",
-       "          y1_fwd        y2_bwd       y2_fwd         E        ES         P  \\\n",
-       "10  -4972.244637  1.163514e-12  1658.983913 -0.477511  0.771957  0.590545   \n",
-       "19  -4966.195678  1.163514e-12  1658.983913  0.771957 -0.477511  0.590545   \n",
-       "41  -4972.244637  1.163514e-12  1658.983913  1.142558 -2.097580 -1.181090   \n",
-       "44  -4972.244637  1.163514e-12  1658.983913  1.142558 -2.097580 -0.590545   \n",
-       "104 -4972.244637  1.163514e-12  1658.983913  1.142558 -2.097580 -0.935994   \n",
-       "\n",
-       "            S  \n",
-       "10   1.371204  \n",
-       "19  -0.935994  \n",
-       "41   1.371204  \n",
-       "44   0.935992  \n",
-       "104 -0.590545  "
+       "       y1_fwd  y2_bwd    y2_fwd         E        ES         P         S  \n",
+       "10  -6.048959     0.0  1.895982 -0.477511  0.771957  0.590545  1.371204  \n",
+       "19   0.000000     0.0  1.895982  0.771957 -0.477511  0.590545 -0.935994  \n",
+       "41  -6.048959     0.0  1.895982  1.142558 -2.097580 -1.181090  1.371204  \n",
+       "44  -6.048959     0.0  1.895982  1.142558 -2.097580 -0.590545  0.935992  \n",
+       "104 -6.048959     0.0  1.895982  1.142558 -2.097580 -0.935994 -0.590545  "
       ]
      },
      "execution_count": 12,
@@ -1315,10 +1310,30 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "array([ 0.        ,  2.40508464, -2.40508464])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_test_norm.y1_bwd.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(981.758478569384, array([ 0.        ,  0.02499832,  0.02710818, -0.00489228, -0.00539026]))\n"
+      "(0.48394498741684555, array([ 0.        ,  0.02499832,  0.02710818, -0.00489228, -0.00539026]))\n"
      ]
     }
    ],
