--- a/src/exploration.ipynb
+++ b/src/exploration.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "/home/charles/anaconda3/lib/python3.6/site-packages/statsmodels/compat/pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
+      "  from pandas.core import datetools\n"
      ]
     }
    ],
@@ -597,9 +597,7 @@
     "\n",
     "where $j\\in [1_{bwd}, 1_{fwd}, 2_{bwd}, 2_{fwd}]$,\n",
     "\n",
-    "$k$ is the effective rate constant, and $k_0$ is the relative rate constant\n",
-    "\n",
-    "The given concentration is (??) $[X]/[X]_0$"
+    "$k$ is the effective rate constant, and $k_0$ is the relative rate constant\n"
    ]
   },
   {
@@ -1117,12 +1115,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "we do the regression oonly for `log_k1_forward`"
+    "we do the regression oonly for `log_k1_backward`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -1270,7 +1268,7 @@
        "4  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1297,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1311,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1324,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -1450,7 +1448,7 @@
        "4  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...  1.240858e-16  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1504,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -1615,7 +1613,7 @@
        "3  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...  6.954811e-17  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1627,7 +1625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -1692,12 +1690,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### note\n",
+    "\n",
+    "here we computed approximation for all four covariates, but we only computed the weights for `log_k1_bwd`, so it is the only computation which is really valuable, but still the results are very different"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " \n",
     " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1712,13 +1727,6 @@
    "source": [
     "print(len(results.variance.unique()))\n",
     "print(len(results['volume fraction'].unique()))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "   help ? "
    ]
   },
   {
@@ -1898,7 +1906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1915,7 +1923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1927,7 +1935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1936,7 +1944,7 @@
        "80190"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1972,7 +1980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1990,7 +1998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -2015,7 +2023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {
     "scrolled": false
    },
@@ -2048,7 +2056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2057,7 +2065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {
     "scrolled": true
    },
@@ -2245,7 +2253,7 @@
        "max   -7.935298e+18 -7.935298e+18  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2261,7 +2269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -3353,7 +3361,7 @@
        "[7290 rows x 11 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3364,7 +3372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -3393,7 +3401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3417,7 +3425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3430,7 +3438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -3456,7 +3464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3467,7 +3475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3496,7 +3504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3514,7 +3522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3523,7 +3531,7 @@
        "1.529293643074293e-18"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3566,7 +3574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
@@ -3578,7 +3586,7 @@
        "       1.36772257e-36])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3604,7 +3612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -3614,7 +3622,7 @@
        "       8.94349214e-19])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3639,7 +3647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -3652,7 +3660,7 @@
       "Model:                            WLS   Adj. R-squared:     -51874801365070468056199725056.000\n",
       "Method:                 Least Squares   F-statistic:                                    -9719.\n",
       "Date:                Thu, 22 Nov 2018   Prob (F-statistic):                               1.00\n",
-      "Time:                        17:19:03   Log-Likelihood:                                 61600.\n",
+      "Time:                        18:21:07   Log-Likelihood:                                 61600.\n",
       "No. Observations:               29160   AIC:                                        -1.232e+05\n",
       "Df Residuals:                   29156   BIC:                                        -1.232e+05\n",
       "Df Model:                           3                                                         \n",
