Discussion with Daniel

--- a/src/Marie_test.ipynb
+++ b/src/Marie_test.ipynb
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +1051,7 @@
        "104  12.706535  3.091042  -9.761988 -11.959213 -11.022305 -10.616837  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1065,12 +1065,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5.77315973e-15, 6.21724894e-15, 5.32907052e-15])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(data_test.y1_bwd - 2.30258509299404).unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# fit regression\n",
-    "\n",
     "\n",
     "def linear_regression(X,y):\n",
     "    reg = LinearRegression()\n",
@@ -1083,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1113,6 +1132,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1121,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,31 +1164,21 @@
     "    '''\n",
     "    normalization of a data_set\n",
     "    '''\n",
+    "    data_tr = data.copy()\n",
+    "    \n",
     "    for i in range(0,data.shape[1]):\n",
-    "        data.iloc[:,i],mean,variance = standardize(data.iloc[:,i])\n",
+    "        data_tr.iloc[:,i],mean,variance = standardize(data_tr.iloc[:,i])\n",
     "\n",
     "    return data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/ada/lib/python3.6/site-packages/pandas/core/indexing.py:630: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self.obj[item_labels[indexer[info_axis]]] = value\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1201,100 +1217,100 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>3.552714e-15</td>\n",
-       "      <td>-1.566699</td>\n",
-       "      <td>1.110223e-16</td>\n",
+       "      <td>31.9</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>-6.048959</td>\n",
+       "      <td>0.825</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.895982</td>\n",
-       "      <td>-0.477511</td>\n",
-       "      <td>0.771957</td>\n",
-       "      <td>0.590545</td>\n",
-       "      <td>1.371204</td>\n",
+       "      <td>2.302585</td>\n",
+       "      <td>11.934139</td>\n",
+       "      <td>12.706535</td>\n",
+       "      <td>3.091042</td>\n",
+       "      <td>-10.860600</td>\n",
+       "      <td>-10.013302</td>\n",
+       "      <td>-9.230543</td>\n",
+       "      <td>-8.314252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>3.552714e-15</td>\n",
-       "      <td>-0.522233</td>\n",
-       "      <td>1.110223e-16</td>\n",
+       "      <td>31.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.825</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.895982</td>\n",
-       "      <td>0.771957</td>\n",
-       "      <td>-0.477511</td>\n",
-       "      <td>0.590545</td>\n",
-       "      <td>-0.935994</td>\n",
+       "      <td>2.302585</td>\n",
+       "      <td>11.934139</td>\n",
+       "      <td>12.706535</td>\n",
+       "      <td>3.091042</td>\n",
+       "      <td>-10.013302</td>\n",
+       "      <td>-10.860600</td>\n",
+       "      <td>-9.230543</td>\n",
+       "      <td>-11.022305</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>41</th>\n",
-       "      <td>3.552714e-15</td>\n",
-       "      <td>-0.870388</td>\n",
-       "      <td>1.110223e-16</td>\n",
+       "      <td>31.9</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.825</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.405085</td>\n",
-       "      <td>-6.048959</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.895982</td>\n",
-       "      <td>1.142558</td>\n",
-       "      <td>-2.097580</td>\n",
-       "      <td>-1.181090</td>\n",
-       "      <td>1.371204</td>\n",
+       "      <td>2.302585</td>\n",
+       "      <td>11.934139</td>\n",
+       "      <td>12.706535</td>\n",
+       "      <td>3.091042</td>\n",
+       "      <td>-9.761988</td>\n",
+       "      <td>-11.959213</td>\n",
+       "      <td>-11.309985</td>\n",
+       "      <td>-8.314252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>44</th>\n",
-       "      <td>3.552714e-15</td>\n",
-       "      <td>-0.870388</td>\n",
-       "      <td>1.110223e-16</td>\n",
+       "      <td>31.9</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.825</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>-6.048959</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.895982</td>\n",
-       "      <td>1.142558</td>\n",
-       "      <td>-2.097580</td>\n",
-       "      <td>-0.590545</td>\n",
-       "      <td>0.935992</td>\n",
+       "      <td>2.302585</td>\n",
+       "      <td>11.934139</td>\n",
+       "      <td>12.706535</td>\n",
+       "      <td>3.091042</td>\n",
+       "      <td>-9.761988</td>\n",
+       "      <td>-11.959213</td>\n",
+       "      <td>-10.616837</td>\n",
+       "      <td>-8.825078</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>104</th>\n",
-       "      <td>3.552714e-15</td>\n",
-       "      <td>1.566699</td>\n",
-       "      <td>1.110223e-16</td>\n",
+       "      <td>31.9</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.825</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.405085</td>\n",
-       "      <td>-6.048959</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.895982</td>\n",
-       "      <td>1.142558</td>\n",
-       "      <td>-2.097580</td>\n",
-       "      <td>-0.935994</td>\n",
-       "      <td>-0.590545</td>\n",
+       "      <td>2.302585</td>\n",
+       "      <td>11.934139</td>\n",
+       "      <td>12.706535</td>\n",
+       "      <td>3.091042</td>\n",
+       "      <td>-9.761988</td>\n",
+       "      <td>-11.959213</td>\n",
+       "      <td>-11.022305</td>\n",
+       "      <td>-10.616837</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          mu_mass  realization    sigma_mass  volume_fraction    y1_bwd  \\\n",
-       "10   3.552714e-15    -1.566699  1.110223e-16              0.0  0.000000   \n",
-       "19   3.552714e-15    -0.522233  1.110223e-16              0.0  0.000000   \n",
-       "41   3.552714e-15    -0.870388  1.110223e-16              0.0  2.405085   \n",
-       "44   3.552714e-15    -0.870388  1.110223e-16              0.0  0.000000   \n",
-       "104  3.552714e-15     1.566699  1.110223e-16              0.0  2.405085   \n",
+       "     mu_mass  realization  sigma_mass  volume_fraction    y1_bwd     y1_fwd  \\\n",
+       "10      31.9          0.0       0.825              0.0  2.302585  11.934139   \n",
+       "19      31.9          3.0       0.825              0.0  2.302585  11.934139   \n",
+       "41      31.9          2.0       0.825              0.0  2.302585  11.934139   \n",
+       "44      31.9          2.0       0.825              0.0  2.302585  11.934139   \n",
+       "104     31.9          9.0       0.825              0.0  2.302585  11.934139   \n",
        "\n",
-       "       y1_fwd  y2_bwd    y2_fwd         E        ES         P         S  \n",
-       "10  -6.048959     0.0  1.895982 -0.477511  0.771957  0.590545  1.371204  \n",
-       "19   0.000000     0.0  1.895982  0.771957 -0.477511  0.590545 -0.935994  \n",
-       "41  -6.048959     0.0  1.895982  1.142558 -2.097580 -1.181090  1.371204  \n",
-       "44  -6.048959     0.0  1.895982  1.142558 -2.097580 -0.590545  0.935992  \n",
-       "104 -6.048959     0.0  1.895982  1.142558 -2.097580 -0.935994 -0.590545  "
+       "        y2_bwd    y2_fwd          E         ES          P          S  \n",
+       "10   12.706535  3.091042 -10.860600 -10.013302  -9.230543  -8.314252  \n",
+       "19   12.706535  3.091042 -10.013302 -10.860600  -9.230543 -11.022305  \n",
+       "41   12.706535  3.091042  -9.761988 -11.959213 -11.309985  -8.314252  \n",
+       "44   12.706535  3.091042  -9.761988 -11.959213 -10.616837  -8.825078  \n",
+       "104  12.706535  3.091042  -9.761988 -11.959213 -11.022305 -10.616837  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
