--- a/src/exploration.ipynb
+++ b/src/exploration.ipynb
@@ -629,6 +629,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![Mass_image.png](../Data/Mass_image.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### knowing that we modify our data set in order to have the $log(\\frac{k_j}{k_{j,0}})$ as a feature we will try to predict"
    ]
   },
