parameter vis & clean-up

--- a/src/Marie_test.ipynb
+++ b/src/Marie_test.ipynb
@@ -274,7 +274,7 @@
     }
    ],
    "source": [
-    "# other trial\n",
+    "# other trial with y2 and P \n",
     "regression_scatterplot(data_k_conc, 'k1_fwd_relative', 'k1_fwd/k1_fwd_0', 'P', '[P] [uM]')"
    ]
   },
@@ -286,6 +286,76 @@
    "source": [
     "plt.scatter(data['log_k1_bwd'], data['E'])\n",
     "plt.show() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  <span style=\"color:red\"> *Garbage, don't look* </span>."
    ]
   },
   {
