Regression result code correction

--- a/src/Marie_test.ipynb
+++ b/src/Marie_test.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "/Users/Marie/anaconda3/lib/python3.6/site-packages/statsmodels/compat/pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
+      "  from pandas.core import datetools\n"
      ]
     }
    ],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -372,21 +372,21 @@
        "      <td>k1_bwd</td>\n",
        "      <td>-0.014756</td>\n",
        "      <td>-0.014822</td>\n",
+       "      <td>-0.014691</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
        "      <td>-0.000190</td>\n",
        "      <td>-0.000317</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.000109</td>\n",
        "      <td>7.713487e-01</td>\n",
-       "      <td>0</td>\n",
        "      <td>-0.002936</td>\n",
        "      <td>-0.002976</td>\n",
+       "      <td>-0.002896</td>\n",
        "      <td>0.000000e+00</td>\n",
-       "      <td>0</td>\n",
        "      <td>-0.002936</td>\n",
        "      <td>-0.002976</td>\n",
+       "      <td>-0.002896</td>\n",
        "      <td>0.000000e+00</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -396,21 +396,21 @@
        "      <td>k1_fwd</td>\n",
        "      <td>0.073132</td>\n",
        "      <td>0.070293</td>\n",
+       "      <td>0.075971</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0.010658</td>\n",
        "      <td>0.003545</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.011204</td>\n",
        "      <td>8.019231e-02</td>\n",
-       "      <td>0</td>\n",
        "      <td>0.000256</td>\n",
        "      <td>-0.001460</td>\n",
+       "      <td>0.001971</td>\n",
        "      <td>7.701728e-01</td>\n",
-       "      <td>0</td>\n",
        "      <td>0.004736</td>\n",
        "      <td>0.002871</td>\n",
+       "      <td>0.006600</td>\n",
        "      <td>6.552938e-07</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -420,21 +420,21 @@
        "      <td>k2_bwd</td>\n",
        "      <td>0.068795</td>\n",
        "      <td>0.065675</td>\n",
+       "      <td>0.071915</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0.000481</td>\n",
        "      <td>-0.005600</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.006852</td>\n",
        "      <td>7.308795e-01</td>\n",
-       "      <td>0</td>\n",
        "      <td>0.006592</td>\n",
        "      <td>0.004601</td>\n",
+       "      <td>0.008584</td>\n",
        "      <td>9.199772e-11</td>\n",
-       "      <td>0</td>\n",
        "      <td>-0.000230</td>\n",
        "      <td>-0.002004</td>\n",
+       "      <td>0.001545</td>\n",
        "      <td>7.996240e-01</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -444,21 +444,21 @@
        "      <td>k2_fwd</td>\n",
        "      <td>-0.014756</td>\n",
        "      <td>-0.014821</td>\n",
+       "      <td>-0.014690</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
        "      <td>-0.000190</td>\n",
        "      <td>-0.000317</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.000108</td>\n",
        "      <td>7.688221e-01</td>\n",
-       "      <td>0</td>\n",
        "      <td>-0.002936</td>\n",
        "      <td>-0.002976</td>\n",
+       "      <td>-0.002896</td>\n",
        "      <td>0.000000e+00</td>\n",
-       "      <td>0</td>\n",
        "      <td>-0.002936</td>\n",
        "      <td>-0.002976</td>\n",
+       "      <td>-0.002896</td>\n",
        "      <td>0.000000e+00</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -468,21 +468,21 @@
        "      <td>k1_bwd</td>\n",
        "      <td>-0.117351</td>\n",
        "      <td>-0.117510</td>\n",
+       "      <td>-0.117192</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0.001708</td>\n",
        "      <td>0.001396</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.003771</td>\n",
        "      <td>5.107549e-100</td>\n",
-       "      <td>0</td>\n",
        "      <td>-0.003575</td>\n",
        "      <td>-0.003673</td>\n",
+       "      <td>-0.003478</td>\n",
        "      <td>0.000000e+00</td>\n",
-       "      <td>0</td>\n",
        "      <td>-0.003564</td>\n",
        "      <td>-0.003661</td>\n",
+       "      <td>-0.003468</td>\n",
        "      <td>0.000000e+00</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -506,34 +506,34 @@
        "3                                   0.825             0.0        k2_fwd   \n",
        "4                                   0.825             0.1        k1_bwd   \n",
        "\n",
-       "       beta                           alpha E             ...    \\\n",
-       "   Estimate     0.025 0.975 p-value  Estimate     0.025   ...     \n",
-       "0 -0.014756 -0.014822   0.0       0 -0.000190 -0.000317   ...     \n",
-       "1  0.073132  0.070293   0.0       0  0.010658  0.003545   ...     \n",
-       "2  0.068795  0.065675   0.0       0  0.000481 -0.005600   ...     \n",
-       "3 -0.014756 -0.014821   0.0       0 -0.000190 -0.000317   ...     \n",
-       "4 -0.117351 -0.117510   0.0       0  0.001708  0.001396   ...     \n",
+       "       beta                               alpha E                ...       \\\n",
+       "   Estimate     0.025     0.975 p-value  Estimate     0.025      ...        \n",
+       "0 -0.014756 -0.014822 -0.014691     0.0 -0.000190 -0.000317      ...        \n",
+       "1  0.073132  0.070293  0.075971     0.0  0.010658  0.003545      ...        \n",
+       "2  0.068795  0.065675  0.071915     0.0  0.000481 -0.005600      ...        \n",
+       "3 -0.014756 -0.014821 -0.014690     0.0 -0.000190 -0.000317      ...        \n",
+       "4 -0.117351 -0.117510 -0.117192     0.0  0.001708  0.001396      ...        \n",
        "\n",
-       "        alpha ES           alpha P                                   alpha S  \\\n",
-       "           0.975 p-value  Estimate     0.025         0.975 p-value  Estimate   \n",
-       "0   7.713487e-01       0 -0.002936 -0.002976  0.000000e+00       0 -0.002936   \n",
-       "1   8.019231e-02       0  0.000256 -0.001460  7.701728e-01       0  0.004736   \n",
-       "2   7.308795e-01       0  0.006592  0.004601  9.199772e-11       0 -0.000230   \n",
-       "3   7.688221e-01       0 -0.002936 -0.002976  0.000000e+00       0 -0.002936   \n",
-       "4  5.107549e-100       0 -0.003575 -0.003673  0.000000e+00       0 -0.003564   \n",
+       "   alpha ES                  alpha P                                    \\\n",
+       "      0.975        p-value  Estimate     0.025     0.975       p-value   \n",
+       "0  0.000109   7.713487e-01 -0.002936 -0.002976 -0.002896  0.000000e+00   \n",
+       "1  0.011204   8.019231e-02  0.000256 -0.001460  0.001971  7.701728e-01   \n",
+       "2  0.006852   7.308795e-01  0.006592  0.004601  0.008584  9.199772e-11   \n",
+       "3  0.000108   7.688221e-01 -0.002936 -0.002976 -0.002896  0.000000e+00   \n",
+       "4  0.003771  5.107549e-100 -0.003575 -0.003673 -0.003478  0.000000e+00   \n",
        "\n",
-       "                                   \n",
-       "      0.025         0.975 p-value  \n",
-       "0 -0.002976  0.000000e+00       0  \n",
-       "1  0.002871  6.552938e-07       0  \n",
-       "2 -0.002004  7.996240e-01       0  \n",
-       "3 -0.002976  0.000000e+00       0  \n",
-       "4 -0.003661  0.000000e+00       0  \n",
+       "    alpha S                                    \n",
+       "   Estimate     0.025     0.975       p-value  \n",
+       "0 -0.002936 -0.002976 -0.002896  0.000000e+00  \n",
+       "1  0.004736  0.002871  0.006600  6.552938e-07  \n",
+       "2 -0.000230 -0.002004  0.001545  7.996240e-01  \n",
+       "3 -0.002936 -0.002976 -0.002896  0.000000e+00  \n",
+       "4 -0.003564 -0.003661 -0.003468  0.000000e+00  \n",
        "\n",
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,13 +544,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save result to a csv file\n",
     "regression_results.to_csv('Regression_results.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
